--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
+    <title>Data Dashboard - MegaBytes Coffee Shop</title>
 </head>
 
 <body>
     <div>
-        <h1>To Do List</h1>
+        <h1>Data Dashboard</h1>
 
         <form action="/add" method="post">
             <div>
