matplotlib graph generator added

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -28,8 +28,8 @@
         </div>
         {% endfor %}
     </div>
-    <a href="/generate">Generate Excel File</a>
-    <a href="sales_figures.xlsx">Download</a>
+    <a href="/generate">Download Excel File</a>
+    <a href="/see_graph">Generate Graph</a>
 </body>
 
 </html>
