--- a/website/templates/plot1.html
+++ b/website/templates/plot1.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  
-<head>
-    <title>Matplotlib Plot</title>
-</head>
-  
-<body>
-    <h1>How to Create Charts in Matplotlib with flask - Example 1</h1>
-    <img src="{{ url_for('static', filename='images/plot.png') }}">
-</body>
-  
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<img src="{{ url_for('static', filename='images/plot.png') }}">
+
+{% endblock %}
